--- a/web/persona.xhtml
+++ b/web/persona.xhtml
@@ -6,7 +6,10 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 
-    <body>
+    <h:head>
+        <title>Personas</title>
+    </h:head>
+    <h:body>
 
         <ui:composition template="./WEB-INF/templates/plantilla.xhtml">
 
@@ -53,5 +56,5 @@
 
         </ui:composition>
 
-    </body>
+    </h:body>
 </html>
