--- a/web/producto.xhtml
+++ b/web/producto.xhtml
@@ -13,7 +13,7 @@
         <ui:composition template="./WEB-INF/templates/plantilla.xhtml">
 
             <ui:define name="content">
-                <f:event type="preRenderView" listener="#{productoBean.listar()}"/>
+                <f:event type="preRenderView" listener="#{productoBean.listar('F')}"/>
                 <p:growl id="msj" autoUpdate="true"/>        
                 <h:form id="frm">
 
