Registro de ventas...

--- a/web/ventas.xhtml
+++ b/web/ventas.xhtml
@@ -13,7 +13,10 @@
             <ui:define name="content">
 
                 <f:event type="preRenderView" listener="#{personaBean.listar('F')}"/>                
-                <f:event type="preRenderView" listener="#{productoBean.listar('F')}"/>                
+                <f:event type="preRenderView" listener="#{productoBean.listar('F')}"/>     
+                
+                <p:growl id="msj" autoUpdate="true" showDetail="true"/>
+                
                 <h:form>
                     <p:outputLabel value="Persona"/>
                     <p:selectOneMenu value="#{ventaBean.venta.persona}" converter="omnifaces.SelectItemsConverter">
@@ -48,7 +51,7 @@
                         </p:column>
                     </p:dataTable>
 
-                    <p:commandButton value="Registar"/>
+                    <p:commandButton value="Registar" actionListener="#{ventaBean.registrar()}" action="ventas?faces-redirect=true"/>
 
                 </h:form>
             </ui:define>
